# FTBQuestLocalizerPython

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml
ftb_quest_localizer/: __init__.py  cli.py  localizer.py
src/ftb_quest_localizer/: __init__.py  cli.py  extractor.py  merger.py  snbt_parser.py  splitter.py
tests/: test_extractor.py  test_merger.py  test_snbt_parser.py  test_splitter.py
