[project]
name = "ftb-quest-localizer"
version = "2.0.5"
description = "FTB Quest Localization Tool - Extract and manage quest strings for easy localization"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Zack Zhu" }]
requires-python = ">=3.10"
dependencies = [
    "snbtlib>=1.0.0",
    "click>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/zack-zzq/FTBQuestLocalizerPython"
"Bug Tracker" = "https://github.com/zack-zzq/FTBQuestLocalizerPython/issues"

[project.scripts]
ftb-quest-localizer = "ftb_quest_localizer.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ftb_quest_localizer"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
